message chat form position fixed on mobile

--- a/includes/css/cemp.css
+++ b/includes/css/cemp.css
@@ -265,6 +265,7 @@
   }
   #cemp-textarea-div{
     margin-bottom: 36px;
+    position: fixed;
   }
   .form-height{
     height: 90px;
